# qrustyquake

./: .gitignore  Build_SteamOS.sh  CMakeLists.txt  Makefile  Makefile.freebsd  README.md  cdaudio.c  common.c  cvarlist.c  d_fog.c  d_part.c  d_polyse.c  d_sprite.c  d_surf.c  globals.c  host_cmd.c  make_release-win64.bat  mathlib.h  pr_cmds.c  r_alias.c  r_draw.c  r_part.c  r_sprite.c  r_surf.c  sys_sdl.c  vid_sdl.c
AppImage/: Dockerfile  build.sh  qrustyquake.desktop  run-in-docker.sh
haiku/SDL3/lib/pkgconfig/: sdl3.pc
haiku/SDL3_mixer/lib/: libSDL3_mixer.so.0.1.0
haiku/SDL3_mixer/lib/cmake/SDL3_mixer/: SDL3_mixerConfig.cmake
haiku/SDL3_mixer/lib/pkgconfig/: sdl3-mixer.pc
linux/SDL3/include/SDL3/: SDL_revision.h
linux/SDL3/lib/cmake/SDL3/: SDL3sharedTargets-release.cmake  SDL3testTargets.cmake
linux/SDL3/lib/pkgconfig/: sdl3.pc
linux/SDL3_mixer/lib/: libSDL3_mixer.so.0  libSDL3_mixer.so.0.1.0
linux/SDL3_mixer/lib/cmake/SDL3_mixer/: SDL3_mixer-shared-targets-release.cmake  SDL3_mixer-shared-targets.cmake  SDL3_mixerConfig.cmake
linux/SDL3_mixer/lib/pkgconfig/: sdl3-mixer.pc
openbsd/SDL3/include/SDL3/: SDL_revision.h
openbsd/SDL3/lib/cmake/SDL3/: SDL3sharedTargets-relwithdebinfo.cmake
openbsd/SDL3/lib/pkgconfig/: sdl3.pc
openbsd/SDL3_mixer/lib/: libSDL3_mixer.so.0.1.0
openbsd/SDL3_mixer/lib/cmake/SDL3_mixer/: SDL3_mixer-shared-targets-relwithdebinfo.cmake
src/: Makefile  cdaudio.c  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cmd.c  common.c  console.c  crc.c  cvar.c  cvarlist.c  cvarlist.h  d_common.c  d_edge.c  d_fog.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  defines.h  globals.c  globals.h  host.c  host_cmd.c  image.c  in_sdl.c  keys.c  mathlib.h  menu.c  miniz.c  model.c  net_bsd.c  net_main.c  net_udp.c  pr_cmds.c  pr_edict.c  (+33 more)
win/sdl3/cmake/: SDL3ConfigVersion.cmake  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake
win/sdl3/include/SDL3/: SDL.h  SDL_assert.h  SDL_begin_code.h  SDL_clipboard.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_dlopennote.h  SDL_endian.h  SDL_events.h  SDL_gpu.h  SDL_hints.h  SDL_intrin.h  SDL_iostream.h  SDL_keycode.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_pen.h  SDL_pixels.h  SDL_properties.h  SDL_rect.h  SDL_render.h  SDL_revision.h  SDL_stdinc.h  SDL_surface.h  SDL_test_common.h  SDL_test_compare.h  SDL_thread.h  SDL_version.h  SDL_video.h
win/sdl3/lib/pkgconfig/: sdl3.pc
win/sdl3_mixer/cmake/: SDL3_mixer-shared-targets-release.cmake  SDL3_mixer-shared-targets.cmake  SDL3_mixerConfig.cmake
win/sdl3_mixer/lib/pkgconfig/: sdl3-mixer.pc
